Fix CSS font-family spacing

--- a/kitsune/sumo/static/sumo/less/includes/search-result.less
+++ b/kitsune/sumo/static/sumo/less/includes/search-result.less
@@ -54,7 +54,7 @@
       background: transparent @iconsSprite no-repeat scroll -49px -862px;
       color: rgb(129, 188, 46);
       display: inline-block;
-      font-family: "Open Sans Light",Arial,Helvetica,sans-serif;
+      font-family: 'Open Sans Light', Arial, Helvetica, sans-serif;
       line-height: 18px;
       text-indent: 22px;
     }
